# nordflux

./: .gitignore  Dockerfile  LICENSE  Makefile  nordflux.example.json  nordflux.py  pyproject.toml
.github/workflows/: container.yml  test.yml
