[tool.poetry]
name = "nordflux"
version = "0.1.2"
description = "Nordpool to InfluxDB exporter"
authors = ["Jakob Schlyter <jakob@kirei.se>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
nordpool = {git = "https://github.com/jschlyter/nordpool.git", rev = "currency_fix"}
#nordpool = "^0.3.0"
influxdb = "^5.3.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
pylama = "^7.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
nordflux = "nordflux:main"
