[tool.poetry]
name = "nordflux"
version = "0.1.3"
description = "Nordpool to InfluxDB exporter"
authors = ["Jakob Schlyter <jakob@kirei.se>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
nordpool = {git = "https://github.com/jschlyter/nordpool.git", rev = "currency_fix"}
#nordpool = "^0.3.0"
influxdb = "^5.3.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pytest = "^8.2.0"
pytest-ruff = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nordflux = "nordflux:main"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-sort-within-sections = false
combine-as-imports = true
split-on-trailing-comma = false
