[project]
name = "nordflux"
dynamic = ["version"]
description = "Nordpool to InfluxDB exporter"
authors = [{name="Jakob Schlyter", email = "jakob@kirei.se"}]
requires-python = ">=3.13,<4.0"
dependencies = [
    "influxdb>=5.3.2",
    "pynordpool>=0.3.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
    "pytest>=8.2.0",
    "pytest-ruff>=0.4.1"
]

[project.urls]
repository = "https://github.com/jschlyter/nordflux.git"

[project.scripts]
nordflux = "nordflux:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-sort-within-sections = false
combine-as-imports = true
split-on-trailing-comma = false
